<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity"
    tools:menu="@menu/menu_actions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdKm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_frais_km"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_km" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdRepas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_frais_repas"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_repas" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdNuitees"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_frais_nuitees"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_nuitees" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdEtapes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_frais_etapes"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_etapes" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdHf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_frais_hf"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_hf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdHfRecap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/icone_recap_hf"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_hf_recap" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal" />

</LinearLayout>

